# nolanlab-dlc

./: README.md  crop.py  dlc_on_comp.py  dlc_on_eddie.py  main.py  pyproject.toml
wolf_crops/: eye_crops_wolf.csv  tongue_crops_wolf.csv
